--- a/views/index.pug
+++ b/views/index.pug
@@ -1,27 +1,7 @@
 extends layout
 
 block content
+  include mixins/restaurantCard
   div.container
-    div.card
-      div.card-header
-        div.backdrop
-        div.card-title Pizza Hut
-        img.card-header-image(src="https://dynl.mktgcdn.com/p/d9AXTJEWMZ156q11dLLVRHsmufNu0K-ng4JYb_4WwRI/1900x1427.jpg")
-      div.card-body
-        div.edit
-          a(href="#") Edit
-        div.card-details
-          div.category Italian
-          div.rating
-            span &#X2b50;
-            span &#X2b50;
-        div.description
-          // a single pipe | allows you to type free floating text
-          | asldkfjasldf jadjfasd fasdf asdf as
-          | asldkfjasldf jadjfasd fasdf asdf as
-          | asldkfjasldf jadjfasd fasdf asdf as
-          | asldkfjasldf jadjfasd fasdf asdf as
-          | asldkfjasldf jadjfasd fasdf asdf as
-          | asldkfjasldf jadjfasd fasdf asdf as
-          | asldkfjasldf jadjfasd fasdf asdf as
-          | asldkfjasldf jadjfasd fasdf asdf as
+    each restaurant in restaurants
+      +restaurantCard(restaurant)
