Continue work on CSS and add filter

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,4 +4,6 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    header.main-header
+      img(src='https://lolinministry.com/wp-content/uploads/2019/09/edited-shutterstock_337999796-1024x683.jpg')
     block content
