--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,6 +9,7 @@ body {
   padding: 48px;
   display: flex;
   gap: 16px;
+  flex-wrap: wrap;
 }
 
 .card {
@@ -86,3 +87,45 @@ body {
 .description {
   margin-top: 16px;
 }
+
+.button {
+  display: block;
+  border-radius: 6px;
+  padding: 8px 16px;
+  text-decoration: none;
+  box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0.5) 0px 1px 2px 0px;
+  font-size: 14px;
+  line-height: 2.5rem;
+}
+
+.button.save {
+  background: #155e75;
+  color: white;
+  border: 1px solid #164e63;
+}
+
+.add-button-row {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.main-header {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.main-header img {
+  width: 20%;
+  margin: 10px;
+  box-shadow: 3px 3px 3px 0 rgba(0, 0, 0, 0.5);
+}
+
+.button-row {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 32px;
+  border-top: 1px solid #e5e7eb;
+  padding-top: 20px;
+}
+/*Keep adding CSS from messages, fix image (add banner?)*/
