--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,5 +5,5 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     header.main-header
-      img(src='https://lolinministry.com/wp-content/uploads/2019/09/edited-shutterstock_337999796-1024x683.jpg')
+      img(src='https://lh3.googleusercontent.com/FezcUgLuzF6cfuPdRLKHOrPrT5eUtzj9vBehIJ9m-9b_duVUX87yhyXukzq1zgGrLF4f3ciyIvx0R34NwEccfNhuA9cWc9HlTx8=w785')
     block content
