--- a/views/mixins/restaurantForm.pug
+++ b/views/mixins/restaurantForm.pug
@@ -21,7 +21,7 @@ mixin restaurantForm(restaurant, actionURL, mode, title)
                     input(type='text' id='image' name='image' value=restaurant.image)
                 div.form-input
                     label(for='description') Description:
-                    textarea(id='description' name='description') #{restaurant.description}
+                    textarea(id='description' name='description' rows='3' cols='50') #{restaurant.description}
                 div.button-row
                     a.button.cancel(href='/') Cancel
                     if (mode==='edit')
