--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -45,6 +45,7 @@ body {
   position: absolute;
   color: white;
   font-size: 32px;
+  font-weight: bold;
   top: 24px;
   left: 24px;
   -webkit-text-stroke: 1px black;
